# arkos2basic

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: music_01.txt
src/arkos2basic/: arkos2basic.py  cli.py  cvbasic.py
src/arkos2basic/arkostracker/: __init__.py  baseimport.py  cell.py  song.py  txtimport.py
tests/: test_cli.py  test_convert.py  test_cvbasic.py  test_txtimport.py
