[project]
name = "arkos2basic"
version = "0.1.0b3"
description = "Converts Arkos Tracker 3 text exports to CVBasic MUSIC blocks. Handles note transposition, variable note duration, percussion detection and intro/loop splitting. Targets ColecoVision, MSX and Sega SG-1000."
authors = [
    {name = "Francesco Maida",email = "francesco.maida@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "typer (>=0.26.7,<0.27.0)"
]

[tool.poetry]
packages = [{include = "arkos2basic", from = "src"}]

[tool.poetry.scripts]
arkos2basic = "arkos2basic.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
